--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.3",
     "typescript": "4.4.4"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
   }
 }
