--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@downwindcss/text-decoration": "^1.1.0",
+    "@heroicons/react": "^1.0.5",
+    "@tailwindcss/typography": "^0.4.1",
     "classnames": "^2.3.1",
     "next": "12.0.3",
+    "next-themes": "^0.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
@@ -26,6 +30,8 @@
   },
   "prettier": {
     "semi": false,
-    "singleQuote": true
+    "singleQuote": true,
+    "arrowParens": "always",
+    "tabWidth": 2
   }
 }
