--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "12.0.3",
     "next-themes": "^0.0.15",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-rough-notation": "^1.0.1"
   },
   "devDependencies": {
     "@types/classnames": "^2.3.1",
