--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/typography": "^0.4.1",
     "classnames": "^2.3.1",
+    "contentlayer": "^0.0.33",
     "next": "12.0.3",
+    "next-contentlayer": "^0.0.33",
     "next-themes": "^0.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -26,6 +28,11 @@
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.3",
     "postcss": "^8.3.11",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-code-titles": "^1.0.3",
+    "rehype-prism-plus": "^1.2.2",
+    "rehype-slug": "^5.0.1",
+    "remark-gfm": "^3.0.1",
     "tailwindcss": "^2.2.19",
     "typescript": "4.4.4"
   },
