--- a/package.json
+++ b/package.json
@@ -1,45 +1,67 @@
 {
   "name": "jackspiva",
   "private": true,
+  "version": "2.0.0",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@downwindcss/text-decoration": "^1.1.0",
-    "@heroicons/react": "^1.0.5",
-    "@tailwindcss/typography": "^0.4.1",
-    "classnames": "^2.3.1",
-    "contentlayer": "^0.0.33",
-    "next": "12.0.3",
-    "next-contentlayer": "^0.0.33",
-    "next-themes": "^0.0.15",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-rough-notation": "^1.0.1"
+    "start": "svelte-kit dev",
+    "build": "svelte-kit build",
+    "preview": "svelte-kit preview",
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+    "format": "prettier --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@types/classnames": "^2.3.1",
-    "@types/node": "16.11.7",
-    "@types/react": "17.0.34",
-    "autoprefixer": "^10.4.0",
-    "eslint": "7.32.0",
-    "eslint-config-next": "12.0.3",
-    "postcss": "^8.3.11",
+    "@sveltejs/adapter-netlify": "^1.0.0-next.44",
+    "@sveltejs/kit": "^1.0.0-next.260",
+    "@tailwindcss/typography": "^0.5.0",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "autoprefixer": "^10.4.1",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-svelte3": "^3.2.1",
+    "gray-matter": "^4.0.3",
+    "mdsvex": "^0.9.8",
+    "postcss": "^8.4.5",
+    "postcss-load-config": "^3.1.0",
+    "prettier": "~2.2.1",
+    "prettier-plugin-tailwindcss": "^0.1.4",
     "rehype-autolink-headings": "^6.1.1",
-    "rehype-code-titles": "^1.0.3",
-    "rehype-prism-plus": "^1.2.2",
+    "rehype-format": "^3.1.0",
     "rehype-slug": "^5.0.1",
-    "remark-gfm": "^3.0.1",
-    "tailwindcss": "^2.2.19",
-    "typescript": "4.4.4"
+    "rehype-stringify": "^8.0.0",
+    "remark-abbr": "^1.4.1",
+    "remark-autolink-headings": "^6.1.0",
+    "remark-frontmatter": "^3.0.0",
+    "remark-github": "^11.2.2",
+    "remark-parse": "^9.0.0",
+    "remark-rehype": "^8.1.0",
+    "remark-sectionize": "^1.1.1",
+    "remark-slug": "^6.1.0",
+    "remark-toc": "^7.2.0",
+    "rss": "^1.2.2",
+    "svelte": "^3.44.3",
+    "svelte-check": "^2.2.11",
+    "svelte-preprocess": "^4.10.1",
+    "tailwindcss": "^3.0.8",
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.4",
+    "unified": "^9.2.2",
+    "vfile": "^5.2.0",
+    "vfile-reporter": "^7.0.3"
   },
-  "prettier": {
-    "semi": false,
-    "singleQuote": true,
-    "arrowParens": "always",
-    "tabWidth": 2
+  "engines": {
+    "node": ">=14.17"
+  },
+  "type": "module",
+  "dependencies": {
+    "date-fns": "^2.28.0",
+    "node-fetch": "^2.6.6",
+    "parse-link-header": "^2.0.0",
+    "prism-themes": "^1.9.0",
+    "shiki": "^0.10.0",
+    "slugify": "^1.6.5",
+    "snarkdown": "^2.0.0"
   }
 }
