--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-svelte3": "^3.2.1",
     "gray-matter": "^4.0.3",
-    "mdsvex": "^0.10.5",
     "postcss": "^8.4.5",
     "postcss-load-config": "^3.1.0",
     "prettier": "~2.2.1",
@@ -63,6 +62,7 @@
     "prism-themes": "^1.9.0",
     "shiki": "^0.10.0",
     "slugify": "^1.6.5",
-    "snarkdown": "^2.0.0"
+    "snarkdown": "^2.0.0",
+    "mdsvex": "^0.10.5"
   }
 }
