--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "format": "prettier --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-vercel": "^1.0.0",
+    "@sveltejs/adapter-vercel": "^1.0.0-next.43",
     "@sveltejs/kit": "^1.0.0-next.260",
     "@tailwindcss/typography": "^0.5.0",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
