--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,19 @@
-.DS_Store
-node_modules
-/.svelte-kit
-/package
-/build
-/functions
-/static/tailwind.css
-/src/lib/sampledata.json
+# build output
+dist/
+
+# dependencies
+node_modules/
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+
+# environment variables
 .env
+.env.production
+
+# macOS-specific files
+.DS_Store
