--- a/package.json
+++ b/package.json
@@ -1,67 +1,19 @@
 {
   "name": "jackspiva",
+  "version": "3.0.0",
   "private": true,
-  "version": "2.0.0",
   "scripts": {
-    "start": "svelte-kit dev",
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
-    "preview": "svelte-kit preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --write --plugin-search-dir=. ."
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "devDependencies": {
-    "@sveltejs/adapter-vercel": "^1.0.0-next.43",
-    "@sveltejs/kit": "^1.0.0-next.260",
-    "@tailwindcss/typography": "^0.5.0",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "autoprefixer": "^10.4.1",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-svelte3": "^3.2.1",
-    "gray-matter": "^4.0.3",
-    "postcss": "^8.4.5",
-    "postcss-load-config": "^3.1.0",
-    "prettier": "~2.2.1",
-    "prettier-plugin-tailwindcss": "^0.1.4",
-    "rehype-autolink-headings": "^6.1.1",
-    "rehype-format": "^3.1.0",
-    "rehype-slug": "^5.0.1",
-    "rehype-stringify": "^8.0.0",
-    "remark-abbr": "^1.4.1",
-    "remark-autolink-headings": "^6.1.0",
-    "remark-frontmatter": "^3.0.0",
-    "remark-github": "^11.2.2",
-    "remark-parse": "^9.0.0",
-    "remark-rehype": "^8.1.0",
-    "remark-sectionize": "^1.1.1",
-    "remark-slug": "^6.1.0",
-    "remark-toc": "^7.2.0",
-    "svelte": "^3.44.3",
-    "svelte-check": "^2.2.11",
-    "svelte-preprocess": "^4.10.1",
-    "tailwindcss": "^3.0.8",
-    "tslib": "^2.3.1",
-    "typescript": "^4.5.4",
-    "unified": "^9.2.2",
-    "vfile": "^5.2.0",
-    "vfile-reporter": "^7.0.3"
-  },
-  "engines": {
-    "node": ">=14.17"
-  },
-  "type": "module",
-  "dependencies": {
-    "date-fns": "^2.28.0",
-    "node-fetch": "^2.6.6",
-    "parse-link-header": "^2.0.0",
-    "prism-themes": "^1.9.0",
-    "shiki": "^0.10.0",
-    "slugify": "^1.6.5",
-    "snarkdown": "^2.0.0",
-    "mdsvex": "^0.10.5"
+    "@astrojs/mdx": "^0.9.0",
+    "@astrojs/rss": "^1.0.0",
+    "@astrojs/sitemap": "^1.0.0",
+    "@astrojs/tailwind": "^1.0.0",
+    "astro": "^1.0.5"
   }
 }
